--- a/drivers/staging/qcacld-2.0/firmware_bin/WCNSS_qcom_cfg.ini
+++ b/drivers/staging/qcacld-2.0/firmware_bin/WCNSS_qcom_cfg.ini
@@ -142,7 +142,7 @@ gFixedRate=0
 
 # RTS threshold
 
-RTSThreshold=1048576
+RTSThreshold=2436
 
 
 # Intra-BSS forward
@@ -312,9 +312,9 @@ gAPChannelSelectEndChannel=11
 gAPChannelSelectOperatingBand=0
 
 
-#Channel Bonding
+#Channel Bonding #by bhb27 the below gChannelBondingMode24GHz may cause random problems
 gChannelBondingMode5GHz=1
-
+#gChannelBondingMode24GHz=1
 
 #Enable Keep alive with non-zero period value
 
@@ -325,7 +325,7 @@ gStaKeepAlivePeriod = 30
 #For both active and power save clients.
 
 #Power save clients: DUT set TIM bit from 10th second onwards and till client honors TIM bit.
-#If doesn't honor for 5 seconds then DUT remove client.
+#If doesnt honor for 5 seconds then DUT remove client.
 
 #Active clients: DUT send Qos Null frame for 10th seconds onwards if it is not success still we try on
 #11th second if not tries on 12th and so on till 15th second. Hence before disconnection DUT will send 5 NULL frames.
@@ -468,7 +468,7 @@ gFlexConnectPowerFactor=0
 gNumChanCombinedConc=60
 
 #Enable Power Save offload
-gEnablePowerSaveOffload=2
+gEnablePowerSaveOffload=1
 
 #Enable firmware uart print
 gEnablefwprint=0
@@ -664,7 +664,7 @@ gMCAddrListEnable=1
 # 1=Enable, 0=Disable (default)
 gEnableMacAddrSpoof=0
 
-# Enable to check FW hash if secure FW feature is enabled. It's for defconfig
+# Enable to check FW hash if secure FW feature is enabled. Its for defconfig
 # builds only since it will be ignored in performance/release builds.
 gEnableFWHashCheck=1
 
@@ -677,7 +677,7 @@ gEnableFWHashCheck=1
 # 1 - enable
 
 gRuntimePM=1
-# When gRuntimePM is disabled gRuntimeAutoTime won't take effect.
+# When gRuntimePM is disabled gRuntimeAutoTime wont take effect.
 # The Time is in msec.
 # 100 is min, 10000 is max, 500 is default.
 
@@ -697,4 +697,3 @@ gAllowDFSChannelRoam=1
 END
 
 # Note: Configuration parser would not read anything past the END marker
-
